compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_actors_send_record_actor_message_mismatch.snap
---
source: tests/fixtures.rs
assertion_line: 2677
expression: transcript
---
fixture: tests/fixtures/diagnostics/actors/send_record_actor_message_mismatch.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × function argument type does not match
    ╭─[tests/fixtures/diagnostics/actors/send_record_actor_message_mismatch.ml:9:3]
  8 │   let senders = sender_box { sender: make_sender() };
  9 │   send(senders.sender, 1);
    ·   ───────────┬───────────
    ·              ╰── this call requires `String`, but the argument provides `i64`
 10 │   dbg("done")
    ╰────
  help: pass an argument with the parameter type expected by the function
